# Esercitazione_4_C_Array

./: .gitignore  README.md
Exercise0/: CMakeLists.txt  README.md  main.cpp
Exercise1/: CMakeLists.txt  README.md  main.cpp
Exercise1/src/: CMakeLists.txt  ClassObj.hpp  Utils.cpp  Utils.hpp
Exercise2/: main.cpp
Exercise2/src/: Utils.cpp  Utils.hpp
